Bharattech/Integrated/Integrated/huly/huly-selfhost/kube/account/account-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: account
  name: account
spec:
  replicas: 1
  selector:
    matchLabels:
      app: account
  template:
    metadata:
      labels:
        app: account
    spec:
      containers:
        - env:
            - name: ACCOUNTS_URL
              valueFrom:
                configMapKeyRef:
                  name: huly-config
                  key: ACCOUNTS_URL
            - name: ACCOUNT_PORT
              value: '3000'
            - name: FRONT_URL
              valueFrom:
                configMapKeyRef:
                  name: huly-config
                  key: FRONT_URL
            - name: STATS_URL
              value: http://stats
            - name: STORAGE_CONFIG
              valueFrom:
                secretKeyRef:
                  name: huly-secret
                  key: STORAGE_CONFIG
            - name: MODEL_ENABLED
              value: '*'
            - name: DB_URL
              valueFrom:
                secretKeyRef:
                  name: huly-secret
                  key: CR_DB_URL
            - name: MONGO_URL
              valueFrom:
                configMapKeyRef:
                  name: huly-config
                  key: MONGO_URL
            - name: SERVER_SECRET
              valueFrom:
                secretKeyRef:
                  name: huly-secret
                  key: SERVER_SECRET
            - name: TRANSACTOR_URL
              valueFrom:
                configMapKeyRef:
                  name: huly-config
                  key: TRANSACTOR_URL
            - name: QUEUE_CONFIG
              value: redpanda:9092
          image: hardcoreeng/account:v0.7.426
          name: account
          ports:
            - containerPort: 3000
          resources:
            limits:
              memory: "512M"
      restartPolicy: Always
